feat(Versionamento de API): Criação de novo Value object para user na v2.